--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - REQUEST_TIER=T3_KYC
       - EXCHANGE_MODE=DIRECT_API_POST
       - API_PREFIX=/api/v1
-      - REQUESTER_CALLBACK_URL=http://requester-ekycis-integration-svc:3000/api/v1/request/callback 
+      - REQUESTER_CALLBACK_URL=http://requester-ekycis-integration-svc:3000/api/v1/request/callback
       - PROVIDER_CALLBACK_URL=http://requester-ekycis-integration-svc:3000/api/v1/provide/callback
       - ISS=idp-requester-demo.svathana.com # <JWT_ISSUER_URL>
       - EXP_MINUTE=60
@@ -51,7 +51,7 @@ services:
   provider-ekycis-integration-svc:
     container_name: provider-ekycis-integration-svc
     build:
-      context: ./app/integration-express
+      context: ./apps/integration-express
       dockerfile: Dockerfile
     environment:
       - PORT=3000
@@ -70,7 +70,7 @@ services:
       - OA_VERIFY_RETRIES=5
       - OA_VERIFY_INTERVAL_MS=1500
       - DATABASE_HOST=host.docker.internal # <DB_HOST>
-      - DATABASE_PORT=27017 # <DB_PORT> 
+      - DATABASE_PORT=27017 # <DB_PORT>
       - DATABASE_NAME=provide_ekyc_demo # <DB_NAME>
       - DATABASE_USER=oaAdmin # <DB_USER>
       - DATABASE_PASSWORD=root # <DB_PASSWORD>
@@ -83,7 +83,7 @@ services:
     build:
       context: ./apps/integration-express
       dockerfile: Dockerfile
-    restart: 'always'
+    restart: "always"
     environment:
       - SIZE_LIMIT=50mb
       - IDENTITY_TYPE=DNS-TXT
@@ -108,11 +108,11 @@ services:
     volumes:
       - ./wallet.json:/usr/src/app/wallet.json
     ports:
-      - '3001:3000'
+      - "3001:3000"
   provider-ekycis-helper-svc:
     container_name: provider-ekycis-helper-svc
     build:
-      context: ./apps/ekycis-helper-svc
+      context: ./apps/ekycis-svc
       dockerfile: Dockerfile
     environment:
       - PORT=3000
