--- a/apps/openattestation-issuing-svc/.env.example
+++ b/apps/openattestation-issuing-svc/.env.example
@@ -1,20 +1,19 @@
-PORT=disired port number
-NODE_TYPE=node type
-ISSUE_DELAY=issuing interval in second (for example: 3)
-BATCH_DELAY=batch interval in second 
-RETRY_DELAY=retry interval in second
-RPC_POOLING_INTERVAL=rpc_pooling_interval
-SIZE_LIMIT=size limit (for example: 20mb)
-DOCUMENT_STORE=document store contract address
-IDENTITY_LOCATION=staging-disig.camdl.gov.kh
-IDENTITY_TYPE=DNS-TXT
-ISSUER_NAME=Staging Digital Signature (Techo Startup Center)
-ISSUER_URL=https://staging-disig.camdl.gov.kh
-STORAGE_BASE_URL=https://staging-disig.camdl.gov.kh/
-WALLET_FILE=location of wallet.json
-WALLET_PWD=wallet password
-NETWORK=camdl-staging
-ADMIN_SECRET=admin secret
+PORT=(desired port number)
+NODE_TYPE=(node type WORKER or MASTER)
+ISSUE_DELAY=(issuing interval in second (eg: 3))
+BATCH_DELAY=(batch interval in second)
+RETRY_DELAY=(retry interval in second)
+RPC_POOLING_INTERVAL=(rpc_pooling_interval in ms (eg: 300))
+SIZE_LIMIT=(size limit (for example: 20mb))
+DOCUMENT_STORE=(document store contract address)
+IDENTITY_LOCATION=(staging-disig.camdl.gov.kh)
+IDENTITY_TYPE=(DNS-TXT)
+ISSUER_NAME=(Staging Digital Signature (Techo Startup Center) NAME FOR ISSUER )
+ISSUER_URL=(https://staging-disig.camdl.gov.kh/ URL FOR ISSUER)
+WALLET_FILE=(location of wallet.json)
+WALLET_PWD=(wallet password)
+NETWORK=(camdl-staging)
+ADMIN_SECRET=(admin secret)
 
 # MONGO CREDENTIALS
 DATABASE_HOST=
